--- a/PMS-PropertyHapa.Staff/Views/Tenant/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Tenant/Index.cshtml
@@ -48,12 +48,12 @@
                                                                 </svg>
 
                                                             </span>
-                                                            <input class="form-control" type="text" placeholder="Search Tenant" aria-label="search" aria-describedby="basic-addon1">
+                                                            <input class="form-control" id="searchInput" type="text" placeholder="Search Tenant" aria-label="search" aria-describedby="basic-addon1">
                                                         </div>
                                                     </div>
 
                                                     <div class="right-side-header">
-                                                        <button class="btn btn-primary" type="button">Export to CSV</button>
+                                                        <a class="btn btn-primary" href="@Url.Action("AddTenant","Tenant")">Add New Tenant</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -78,16 +78,13 @@
                                                             }
 
                                                         </div>
+                                                        </div>
                                                         <div class="col-xl-9 xl-20 col-md-7 box-col-6" style="padding-left: 0px;">
                                                             <div class="tab-content" id="v-pills-tabContent">
                                                                 @foreach (var item in Model ?? Enumerable.Empty<PMS_PropertyHapa.Models.DTO.TenantModelDto>())
                                                                 {
                                                                     <div class="tab-pane contact-tab-0 tab-content-child fade show active" id="v-pills-user" role="tabpanel" aria-labelledby="v-pills-user-tab">
                                                                         <div class="profile-mail">
-                                                                            <div class="d-flex border-0 px-2" style="height: 35px;">
-                                                                                <span class="fw-bold">Tenant Detail</span>
-                                                                                <i class="icon-close"></i>
-                                                                            </div>
                                                                             <div class="d-flex justify-content-between border-0 p-2" style="align-items: flex-start !important; background-color: #f4f8ff;">
 
 
@@ -154,14 +151,14 @@
                                                                                         </div>
                                                                                         <div class="d-flex border-0  flex-column">
                                                                                             <span class="fw-medium" style="font-size: 12px; color: #999;">Shared with</span>
-                                                                                            <img class="img-fluid rounded-circle update_img_0" src="../assets/images/user/2.png" alt="" style="max-width: 30px; height: auto;">
+                                                                                            <img class="img-fluid rounded-circle update_img_0" src="~/Dashboard/assets/images/user/2.png" alt="" style="max-width: 30px; height: auto;">
                                                                                         </div>
                                                                                     </div>
                                                                                 </div>
                                                                                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 px-md-3 px-2 py-3">
                                                                                     <div class="text-primary fw-bold">Collection</div>
                                                                                     <div class="d-flex flex-wrap border-0 ">
-                                                                                        <img class="img-fluid rounded-circle  m-r-20 update_img_0 mt-3 " src="../assets/images/user/2.png" alt="" style="width: 30px; height: 30px">
+                                                                                        <img class="img-fluid rounded-circle  m-r-20 update_img_0 mt-3 " src="~/Dashboard/assets/images/user/2.png" alt="" style="width: 30px; height: 30px">
                                                                                         <div class="flex-grow-1 d-flex flex-column border-0  px-2" style="gap: 10px;">
                                                                                             <div class="d-flex flex-column mt-3 border-0 ">
                                                                                                 <span class="fw-medium" style="font-size: 12px; color: #999;">Current Invoices</span>
@@ -253,13 +250,29 @@
             </div>
         </div>
     </div>
-    </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css">
 
    <script>
+
+    $(document).ready(function () {
+        $('#searchInput').on('input', function () {
+            var searchText = $(this).val().toLowerCase();
+            $('.nav-link').each(function () {
+                var ownerName = $(this).find('.first_name_0').text().toLowerCase() + ' ' + $(this).find('.last_name_0').text().toLowerCase();
+                if (ownerName.includes(searchText)) {
+                    $(this).show();
+                } else {
+                    $(this).hide();
+                }
+            });
+        });
+    $('.contacts-tabs .nav-link ').removeClass('active show');
+        $('.contacts-tabs .tab-content .tab-content-child ').removeClass('active show');
+        $('.contact-tab-' + @Model.Take(1).Select(x=>x.TenantId).FirstOrDefault()).addClass('active show');
+    });
         function editTenant(tenantId) {
             window.location.href = `/Tenant/EditTenant?tenantId=${tenantId}`;
         }
