--- a/PMS-PropertyHapa.Staff/Views/Tenant/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Tenant/Index.cshtml
@@ -271,7 +271,7 @@
         });
     $('.contacts-tabs .nav-link ').removeClass('active show');
         $('.contacts-tabs .tab-content .tab-content-child ').removeClass('active show');
-        $('.contact-tab-' + @Model.Take(1).Select(x=>x.TenantId).FirstOrDefault()).addClass('active show');
+        $('.contact-tab-' + @Model?.Take(1).Select(x=>x.TenantId).FirstOrDefault()).addClass('active show');
     });
         function editTenant(tenantId) {
             window.location.href = `/Tenant/EditTenant?tenantId=${tenantId}`;
