--- a/PMS-PropertyHapa.Owner/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Owner/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -108,7 +108,7 @@
                                 <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Transaction")">TRANSACTION</a></li>
                                 <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Request")">REQUESTS</a></li>
                                 <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Reports")">REPORTS</a></li>
-                                
+                                <li class="nav-item"><a class="nav-link" href="@Url.Action("ManageProperty","Auth")">MANAGE PROPERTY</a></li>
                                 <li class="nav-item"><a class="nav-link" href="@Url.Action("Logout","Auth")">Logout</a></li>
                             </ul>
                             <div class="buy-block">
