--- a/PMS-PropertyHapa.Staff/Views/Assests/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Assests/Index.cshtml
@@ -70,7 +70,7 @@
                                     <tr>
                                         <td>
                                             <div class="d-flex border-0 gap-2  align-items-center ">
-                                                <img class="img-fluid rounded-1 update_img_0" src="../assets/images/user/2.png" alt="" style="max-width: 50px; height: auto;">
+                                                <img class="img-fluid rounded-1 update_img_0" src="~/Dashboard/assets/images/user/2.png" alt="" style="max-width: 50px; height: auto;">
                                                 <div class="d-flex flex-column  border-0 ">
                                                     <div class="d-flex border-0 flex-column align-items-baseline ">
                                                         <span class="fw-bold  tableFontSize">9600 Universal</span>
@@ -91,7 +91,7 @@
                                     <tr>
                                         <td>
                                             <div class="d-flex border-0 gap-2  align-items-center ">
-                                                <img class="img-fluid rounded-1 update_img_0" src="../assets/images/user/2.png" alt="" style="max-width: 50px; height: auto;">
+                                                <img class="img-fluid rounded-1 update_img_0" src="~/Dashboard/assets/images/user/2.png" alt="" style="max-width: 50px; height: auto;">
                                                 <div class="d-flex flex-column  border-0 ">
                                                     <div class="d-flex border-0 flex-column align-items-baseline ">
                                                         <span class="fw-bold  tableFontSize">9600 Universal</span>
@@ -112,7 +112,7 @@
                                     <tr>
                                         <td>
                                             <div class="d-flex border-0 gap-2  align-items-center ">
-                                                <img class="img-fluid rounded-1 update_img_0" src="../assets/images/user/2.png" alt="" style="max-width: 50px; height: auto;">
+                                                <img class="img-fluid rounded-1 update_img_0" src="~/Dashboard/assets/images/user/2.png" alt="" style="max-width: 50px; height: auto;">
                                                 <div class="d-flex flex-column  border-0 ">
                                                     <div class="d-flex border-0 flex-column align-items-baseline ">
                                                         <span class="fw-bold  tableFontSize">9600 Universal</span>
@@ -133,7 +133,7 @@
                                     <tr>
                                         <td>
                                             <div class="d-flex border-0 gap-2  align-items-center ">
-                                                <img class="img-fluid rounded-1 update_img_0" src="../assets/images/user/2.png" alt="" style="max-width: 50px; height: auto;">
+                                                <img class="img-fluid rounded-1 update_img_0" src="~/Dashboard/assets/images/user/2.png" alt="" style="max-width: 50px; height: auto;">
                                                 <div class="d-flex flex-column  border-0 ">
                                                     <div class="d-flex border-0 flex-column align-items-baseline ">
                                                         <span class="fw-bold  tableFontSize">9600 Universal</span>
@@ -249,9 +249,7 @@
 </div>
 <script>
     $(document).ready(function () {
-        $('.contacts-tabs .nav-link ').removeClass('active show');
-        $('.contacts-tabs .tab-content .tab-content-child ').removeClass('active show');
-        $('.contact-tab-' + @Model.Take(1).Select(x=>x.AssetId).FirstOrDefault()).addClass('active show');
+
     });
 </script>
 
