--- a/PMS-PropertyHapa.Tenant/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Tenant/Views/Shared/_Layout.cshtml
@@ -38,6 +38,7 @@
     <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/style.css">
     <link id="color" rel="stylesheet" href="~/Dashboard/assets/css/color-1.css" media="screen">
     <!-- Responsive css-->
+    <link href="~/dashboard/assets/css/customstyle.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/responsive.css">
     <style>
         .landing-page .title {
@@ -105,24 +106,46 @@
                                 <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Insurance")">INSURANCE</a></li>
                                 <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Request")">REQUESTS</a></li>
                                 <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Announcements")">ANNOUNCEMENTS</a></li>
-                                <li class="nav-item"><a class="nav-link" href="@Url.Action("Logout","Auth")">Logout</a></li>
                             </ul>
-                            <div class="buy-block">
-                                <div class="toggle-menu"><i class="fa fa-bars"></i></div>
+                            <div class="toggle-menu"><i class="fa fa-bars"></i></div>
+                            <div class="d-flex align-items-center gap-4" style="padding-right: 20px;">
+
+                                <div class="dropdown cutomNotification">
+                                    <div class="notification-box ">
+                                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <g>
+                                                <g>
+                                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M11.9961 2.51416C7.56185 2.51416 5.63519 6.5294 5.63519 9.18368C5.63519 11.1675 5.92281 10.5837 4.82471 13.0037C3.48376 16.4523 8.87614 17.8618 11.9961 17.8618C15.1152 17.8618 20.5076 16.4523 19.1676 13.0037C18.0695 10.5837 18.3571 11.1675 18.3571 9.18368C18.3571 6.5294 16.4295 2.51416 11.9961 2.51416Z" stroke="#130F26" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                                    <path d="M14.306 20.5122C13.0117 21.9579 10.9927 21.9751 9.68604 20.5122" stroke="#130F26" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                                </g>
+                                            </g>
+                                        </svg><span class="badge rounded-pill badge-warning">23 </span>
+                                    </div>
+                                </div>
+
+                                <div class="dropdown profileDropDownWrapper">
+                                    <div class="notification-box d-flex align-items-center gap-1 ">
+                                        <img class="img-fluid rounded-circle update_img_0" src="~/Dashboard/assets/images/user/2.png" alt="" style="width: 30px; height: 30px;">
+                                        <img src="~/Dashboard/assets/images/sortDownUser.png" style="width: 12px;" />
+                                    </div>
+
+                                    <ul class="dropdown-menu profileDropDown" aria-labelledby="dropdownMenuButton2">
+
+                                        <li class="">
+                                            <div class="d-flex justify-content-start  align-items-center w-100 p-2">
+                                                <a href="@Url.Action("Logout","Auth")">Logout</a>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
+
                             </div>
                         </nav>
                     </div>
                 </div>
             </div>
         </header>
-        <section class="core-feature section-py-space" id="core-feature" style="padding-top:150px!important">
-            @RenderBody()
-        </section>
-        <section class="color-theme section-py-space">
-            <div class="title">
-                <h1>Property Hapa</h1>
-            </div>
-        </section>
+        @RenderBody()
     </div>
     <script src="~/Dashboard/assets/js/jquery-3.5.1.min.js"></script>
     <script src="~/Dashboard/assets/js/bootstrap/bootstrap.bundle.min.js"></script>
